@@ -1,0 +1,9 @@
+Title: It's now possible to bulk notifications based on Event console contacts
+Level: 1
+Component: notifications
+Compatible: compat
+Version: 1.4.0i2
+Date: 1477647911
+Class: feature
+
+
